# django-commento-sso

./: LICENSE  MANIFEST.in  README.md  README.rst  manage.py  setup.cfg
django_commento_sso/: conf.py  urls.py  utils.py  views.py
django_commento_sso.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
