[metadata]
name = django-commento-sso
version = 0.2
description = A Django app to receive and process commento.io sso
long_description = file: README.rst
url = https://github.com/patrickscottbest/django-commento-sso
author = Patrick Scott Best
author_email = patrickscottbest@gmail.com
license = MIT License 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:
